destination small-icons hover effect fixed

--- a/agoda-2.css
+++ b/agoda-2.css
@@ -106,18 +106,34 @@
 .city-div {
     min-width: 150px;
     max-width: 150px;
-    height: 100%;
+    height: 180px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: center;
     margin: 0 5px;
 }
 
+.city-div:hover {
+    cursor: pointer;
+}
+
 .city-img{
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.city-img img{
+    width: 120px;
     border-radius: 50%;
-    box-shadow: var(--showdow);
-    width: 80%;
+}
+
+.city-img:hover img{
+    width: 130px;
+    box-shadow: 0 0 5px var(--grey);
 }
 
 .city-name {
